--- a/Utilisateurs.Application/Utilisateurs.Application.csproj
+++ b/Utilisateurs.Application/Utilisateurs.Application.csproj
@@ -13,7 +13,8 @@
   <ItemGroup>
     <Folder Include="Commands\" />
     <Folder Include="Handlers\" />
-    <Folder Include="Queries\" />
+    <Folder Include="Queries\GetUtilisateur\" />
+    <Folder Include="Queries\GetRole\" />
   </ItemGroup>
 
 </Project>
