--- a/Utilisateurs.Application/Utilisateurs.Application.csproj
+++ b/Utilisateurs.Application/Utilisateurs.Application.csproj
@@ -12,9 +12,10 @@
 
   <ItemGroup>
     <Folder Include="Commands\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="Queries\GetUtilisateur\" />
-    <Folder Include="Queries\GetRole\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
 </Project>
