--- a/Utilisateurs.Domain/Utilisateurs.Domain.csproj
+++ b/Utilisateurs.Domain/Utilisateurs.Domain.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<Folder Include="Entities\" />
-		<Folder Include="Interfaces\" />
+		<Folder Include="Mapper\" />
 	</ItemGroup>
 
 </Project>
