--- a/Utilisateurs.Domain/Utilisateurs.Domain.csproj
+++ b/Utilisateurs.Domain/Utilisateurs.Domain.csproj
@@ -8,7 +8,10 @@
 
 	<ItemGroup>
 		<Folder Include="Entities\" />
-		<Folder Include="Mapper\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	</ItemGroup>
 
 </Project>
