--- a/Utilisateurs.Api/Utilisateurs.Api.csproj
+++ b/Utilisateurs.Api/Utilisateurs.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Utilisateurs.Application\Utilisateurs.Application.csproj" />
+    <ProjectReference Include="..\Utilisateurs.Domain\Utilisateurs.Domain.csproj" />
     <ProjectReference Include="..\Utilisateurs.Infrastructure\Utilisateurs.Infrastructure.csproj" />
   </ItemGroup>
 
