--- a/Utilisateurs.Api/Utilisateurs.Api.csproj
+++ b/Utilisateurs.Api/Utilisateurs.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Flurl.Http" Version="4.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
@@ -17,10 +18,6 @@
     <ProjectReference Include="..\Utilisateurs.Application\Utilisateurs.Application.csproj" />
     <ProjectReference Include="..\Utilisateurs.Domain\Utilisateurs.Domain.csproj" />
     <ProjectReference Include="..\Utilisateurs.Infrastructure\Utilisateurs.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\v2\" />
   </ItemGroup>
 
 </Project>
