--- a/Utilisateurs.Api/Utilisateurs.Api.csproj
+++ b/Utilisateurs.Api/Utilisateurs.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Flurl.Http" Version="4.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <PackageReference Include="Polly" Version="8.2.0" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
